# gobot

./: .gitignore  Dockerfile  Jenkinsfile  inventory.yml  playbook.yml  pyproject.toml  tournament_go_2021-12-07_192502.sql
.github/workflows/: server-tuning.yml
APP/: bot.py  main.py
APP/config/: mysql.py
APP/logs/: log.py
APP/objects/: city.py  send_tournament.py  tournament.py  userbot.py
APP/queries_to_tables/: children_categories.py  cities.py  db_query.py  keyboards.py  tournament_go.py  user_botgo.py  usercity.py
APP/stages/: age_category.py  city_selection_chenge.py  massage_to_developer.py  state_main.py  tournaments_in_my_city.py
BOT/: bot.py  city.py  log.py  main.py  mysql_dbconfig.py  tournament.py
BOT/queries_to_tables/: children_categories.py  cities.py  database_query.py  keyboards.py  tournament_go.py  user_botgo.py  usercity.py
BOT/stages/: age_category.py  city_selection_chenge.py  massage_to_developer.py  state_main.py
ansible/tasks/: main.yml
chartbot/: db.sql  values.yml.j2
first-try/: install_bot.yml  install_k3s.yml  inventory.yml.j2  replacing-variables.yml  secretbot.yml
