[tool.poetry]
name = "botgo"
version = "0.1.0"
description = ""
authors = ["FoilV <viktoriazubova449@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pyTelegramBotAPI = "^4.2.2"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
mypy = "^0.930"
mariadb = "^1.0.9"
beautifulsoup4 = "^4.10.0"
bs4 = "^0.0.1"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
